Fix menu letter spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ h1, h2 {
 
 #menu {
     font-size: 100%;
-    letter-spacing 4px;
+    letter-spacing: 4px;
 }
 
 #menu, #logo {
@@ -68,5 +68,5 @@ h1, h2 {
 #hero-cocktail {
     height: 600px;
     width: 100%;
-    background: url(../images/hero\ image.jpeg) no-repeat center center;
+    background: url(../images/hero\ cocktail.webp) no-repeat center center;
 }
